# cliporaai-backend

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  mypy.ini  pyproject.toml  ruff.toml  test_logging.py
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 01e1c789705c_add_project_video_cuttingplan_and_.py  355de92cb590_init.py  4bcc271e1e63_create_users_table.py  4f69ea0c1593_add_updated_at_trigger_for_users_table.py  6a10a7916097_add_user_profile_fields_and_timestamps.py  fc6f9fa4a664_initialize_application_architecture.py
app/: __init__.py  dependencies.py  main.py
app/api/v1/: __init__.py  auth_router.py  file_router.py  health_router.py  project_router.py
app/core/: celery_app.py  config.py  error_handlers.py  exceptions.py  json_logging.py  logging.py  rate_limiter.py  security.py  types.py
app/db/: session.py
app/domain/: enums.py
app/middleware/: __init__.py  max_body_size.py  request_id.py  security.py
app/models/: __init__.py  audio.py  cutting_plan.py  export_job.py  project.py  user.py  video.py
app/repositories/: audio_repository.py  base.py  project_repository.py  user_repository.py  video_repository.py
app/schemas/: file.py  project.py  user.py
app/services/: audio_service.py  auth_service.py  project_service.py  storage_service.py  video_service.py
app/tasks/: __init__.py
app/utils/: __init__.py  file_validation.py
tests/: conftest.py  test_dependencies.py
tests/api/: test_auth_router.py  test_health_router.py  test_project_router.py
tests/repositories/: test_audio_repository.py  test_user_repository.py  test_video_repository.py
tests/services/: test_audio_service.py  test_auth_service.py  test_video_service.py
